# bookstore

./: .gitignore  README.md  pyproject.toml
bookstore/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_book_price.py  0002_author_biography_book_image.py  0002_genre_book_genre.py  0002_rename_genre_book_genres.py  0003_remove_author_biography.py  0003_remove_book_image.py
products/tests/: test_api.py
